fix: add min-height to the Modal to not collapse to height 0

--- a/src/components/hoc/ModalGenerator/Modal/Modal.module.css
+++ b/src/components/hoc/ModalGenerator/Modal/Modal.module.css
@@ -2,6 +2,7 @@
     background-color: white;
     width: 90%;
     max-width: 500px;
+    min-height: 40%;
     max-height: max-content;
     box-shadow: 0 0 5px 5px rgba(51, 51, 51, 0.3);
     border-radius: 5px;
